# techopark_cpp_hw

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  main.cpp
.github/workflows/: main.yml
linters/: run.sh
matrix_lib/: CMakeLists.txt
matrix_lib/include/: dmatrix.h  dmatrix_compile.h  dvector.h  stdafx.h
matrix_lib/src/: dmatrix.cpp  dmatrix_operators.cpp  dvector.cpp  dvector_operators.cpp
matrix_lib/tests/: CMakeLists.txt  test_matrix.cpp  test_matrix_compile.cpp  test_vector.cpp
set_lib/: CMakeLists.txt
set_lib/include/: iterator.h  iterator_definition.h  iterator_definition.hpp  set.h  set_definition.h  set_definition.hpp
tests/: CMakeLists.txt  test_cases_alexey_halaidzhy.cpp  test_set.cpp
